# openhms

./: .gitignore  DIETPI_SETUP.md  LICENSE  README.md  deploy.sh  health.py  openhms.service  pyproject.toml  setup_app.sh  setup_systemd.sh
src/openhms/: config.py  health.py  inverter.py  main.py  models.py  web.py
src/openhms/templates/: base.html  dashboard.html
src/openhms800/: config.py  health.py  inverter.py  models.py  web.py
src/openhms800/templates/: base.html
