[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openhms"
version = "0.4.0"
description = "OpenHMS web service."
dependencies = [
    "aiohttp",
    "aiohttp-jinja2",
    "jinja2",
    "aiomqtt",
    "pydantic",
    "pydantic-settings",
    "protobuf",
    "hiflow-ble @ git+https://github.com/TheTiEr/hiflow-ble.git",
    "psutil",
]

[project.urls]
"Homepage" = "https://github.com/MichaelMay81/openhms"
"Bug Tracker" = "https://github.com/MichaelMay81/openhms/issues"

[project.scripts]
openhms = "openhms.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openhms = ["templates/*", "static/*"]
