[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openhms"
version = "0.4.0"
description = "OpenHMS web service."
dependencies = [
    "aiohttp",
    "aiohttp-jinja2",
    "jinja2",
    "aiomqtt",
    # Pinned: newer releases pull a pydantic-core build requiring rustc >= 1.88,
    # which isn't available on DietPi/Raspberry Pi platforms (rustc 1.85.0).
    "pydantic==2.12.5",
    "pydantic-settings",
    "protobuf",
    "hiflow-ble @ git+https://github.com/TheTiEr/hiflow-ble.git",
    "psutil",
    # Pinned for the same rustc 1.85.0 compatibility reason as pydantic above.
    "cryptography==43.0.3",
]

[project.urls]
"Homepage" = "https://github.com/MichaelMay81/openhms"
"Bug Tracker" = "https://github.com/MichaelMay81/openhms/issues"

[project.scripts]
openhms = "openhms.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openhms = ["templates/*", "static/*"]
